Disabled deltaz(=diff. in swire z-pos. betw. the old- and the final-design)-related lines and file, because these are no longer necessary.

--- a/cdc/data/README
+++ b/cdc/data/README
@@ -144,7 +144,7 @@ To be eliminated when the final design is implemented in geometry in future.
 
 Format: layer  backward-deltaz (cm)  forward-deltaz (cm)
 
-deltaz.dat
+deltaz.dat: obsolete (no longer needed).
 
 
 displacement  w.r.t. final design
