Introduced corrections for the longer outer wall (by 430um wrt design).

--- a/cdc/data/README
+++ b/cdc/data/README
@@ -157,6 +157,7 @@ Only apply to sense wire positions.
 
 Format: layerID (0-55), wireID (0-), displacement (dx,dy,dz) of sense wire at backward end-plate [cm], ibid. at forward end-plate [cm]
 
-* deisplacement.dat:  obsolete
-* deisplacement_v1.dat: tensions added
+* deisplacement.dat:  <- obsolete
+* deisplacement_v1.dat: tensions added <- obsolete
+* deisplacement_v1.1.dat: add corrections for the longer outer wall (by 430um w.r.t. design)
 
