Very minor update.

--- a/cdc/data/README
+++ b/cdc/data/README
@@ -59,7 +59,8 @@ sigma in new format
  - add incident angle bin info. at the top of a file in old format.
  - add sigma parameterization mode and no. of params. after that. 
    mode=0: default;
-       =1: add 2 params. to describe sigma better near a cell boundary.
+       =1: add 2 params. to describe sigma better near a cell boundary;
+       =2: similar to mode=1 but slightly-different parameterization.
 * sigma_v1.dat       : created from sigma_v0.1.dat.
 
 sigma in old format
