Updated the ipython_tutorial to the newest version of the modular analysis

--- a/framework/examples/ipython_tools/tutorial.ipynb
+++ b/framework/examples/ipython_tools/tutorial.ipynb
@@ -409,19 +409,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "import basf2\n",
     "from modularAnalysis import *\n",
-    "file_name = \"http://www-ekp.physik.uni-karlsruhe.de/~nbraun/B2JpsiKs_mu_BGx0_r1000.root\"\n",
+    "file_name = \"http://ekpwww.physik.uni-karlsruhe.de/~nbraun/B2JpsiKs_mu_BGx0_r1000.root\"\n",
     "filelistSIG = [file_name]\n",
     "\n",
     "main_path = create_path()\n",
     "queue = handler.create_queue()\n",
     "\n",
-    "inputMdstList(filelistSIG, path=main_path)\n",
+    "inputMdstList(\"default\", filelist=filelistSIG, path=main_path)\n",
     "\n",
     "fillParticleList('pi+:loose', 'piid > 0.01', path=main_path)\n",
     "fillParticleList('mu+:loose', 'muid > 0.01', path=main_path)\n",
@@ -500,7 +500,7 @@
    },
    "outputs": [],
    "source": [
-    "calculation = handler.process(main_path, result_queue=queue)\n",
+    "calculation = handler.process(main_path, max_event=1000, result_queue=queue)\n",
     "calculation.start()\n",
     "calculation.wait_for_end()"
    ]
@@ -705,7 +705,7 @@
     "def path_creator(chi2_cut, m_band_size, queue):\n",
     "    main_path = create_path()\n",
     "\n",
-    "    inputMdstList(filelistSIG, path=main_path)\n",
+    "    inputMdstList(\"default\", filelist=filelistSIG, path=main_path)\n",
     "    fillParticleList('pi+:loose', 'piid > 0.01', path=main_path)\n",
     "    fillParticleList('mu+:loose', 'muid > 0.01', path=main_path)\n",
     "    reconstructDecay('K_S0:pipi -> pi+:loose pi-:loose', '0.4 < M < 0.6', path=main_path)\n",
@@ -738,7 +738,7 @@
     "    queue.put('output_file_name', output_file_name)\n",
     "    ntupleTree('B0tree', 'B0:jspiks', toolsDST, path=main_path)\n",
     "    \n",
-    "    return main_path"
+    "    return {\"path\": main_path, \"max_event\": 1000}"
    ]
   },
   {
@@ -1020,7 +1020,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
