added script to generate SoftwareTrigger payloads for the testbeam

--- a/hlt/softwaretrigger/scripts/softwaretrigger/hlt_cuts.ipynb
+++ b/hlt/softwaretrigger/scripts/softwaretrigger/hlt_cuts.ipynb
@@ -2,21 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "from softwaretrigger import db_access\n",
-    "from ROOT import Belle2"
+    "from ROOT import Belle2\n",
+    "from basf2 import *\n",
+    "from testbeam.utils import *\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Setup local database\n",
+    "setup_database()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
