Reenabled the collections viewer (performance does not play a major role here anyway)

--- a/framework/tests/jupyter_integration.ipynb
+++ b/framework/tests/jupyter_integration.ipynb
@@ -75,18 +75,18 @@
     "# display the path content\n",
     "calculation.show_path()\n",
     "\n",
-    "# display the dependencies\n",
-    "# todo: this is not working atm\n",
-    "#calculation.show_dependencies()\n",
-    "\n",
     "# todo: enable later start calculation\n",
     "calculation.start()\n",
     "calculation.wait_for_end()\n",
     "\n",
     "calculation.show_log()\n",
     "\n",
+    "# display the dependencies\n",
+    "# todo: this is not working atm\n",
+    "calculation.show_dependencies()\n",
+    "\n",
     "# todo: not working atm\n",
-    "#calculation.show_collections()"
+    "calculation.show_collections()"
    ]
   },
   {
@@ -101,6 +101,15 @@
    "source": [
     "# todo: test more basf2 widgets"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -120,6 +129,46 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
+  },
+  "widgets": {
+   "state": {
+    "488ab5d60c1f43bab0652767836b6b19": {
+     "views": [
+      {
+       "cell_index": 6
+      }
+     ]
+    },
+    "8d5adc3092f44cf3a0f0162d2e20c21b": {
+     "views": [
+      {
+       "cell_index": 4
+      }
+     ]
+    },
+    "8dab1a991e7d41fdba9cbf8dd32b675f": {
+     "views": [
+      {
+       "cell_index": 4
+      }
+     ]
+    },
+    "edfcc080a40346948d976b06207dacfa": {
+     "views": [
+      {
+       "cell_index": 4
+      }
+     ]
+    },
+    "fab7621dc5c94048b02e248bff6e8e8e": {
+     "views": [
+      {
+       "cell_index": 4
+      }
+     ]
+    }
+   },
+   "version": "1.2.0"
   }
  },
  "nbformat": 4,
